--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ background-image: url("gallery/bkgd.jpg");
 header{
 font-size:100px;
 text-align:center;
-background-image:url("logobk.jpg");
+background-image:url("gallery/logobk.jpg");
 font-weight:bolder;
 color:red;
 text-shadow:-6px -4px 4px black;
