--- a/style.css
+++ b/style.css
@@ -83,3 +83,12 @@ margin:10%;
 padding:0;
 }
 
+p.com{
+text-align:center;
+margin:40px;
+}
+h3{
+font-size:35px;
+text-align: center;
+margin:80px 0px;
+}
